perubahan pada README dan folder baru pics

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 header {
-    background-image: url(coconuttree.jpg);
+    background-image: url(pics/coconuttree.jpg);
     background-size: cover;
     background-position: center;
   }
